--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 			</div>
 		</nav>
 		<div class="container">
-			<div id="newTaskWrap" class="row">
+			<div id="addTaskWrap" class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="input-group">
-						<input id="newTaskInput" type="text" class="form-control" placeholder="New task">
+						<input id="addTaskInput" type="text" class="form-control" placeholder="New task">
 						<span class="input-group-btn">
-							<button id="btn-newTask" class="btn btn-primary" type="button">Add task</button>
+							<button id="btn-addTask" class="btn btn-primary" type="button">Add task</button>
 						</span>
 					</div>
 				</div>
 			</div>
 			<div id="statusWrap" class="row">
 				<div class="col-md-12">
-					<span class="label label-success">Compelete : <span class="doneNum">10</span></span>
-					<span class="label label-danger">Danger : <span class="yetNum">50</span></span>
+					<span class="label label-success">Done : <span class="doneNum">10</span></span>
+					<span class="label label-danger">Yet : <span class="yetNum">50</span></span>
 				</div>
 			</div>
 			<div class="row">
