add visibility reducer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<span class="label label-success">Done : <span class="doneNum">10</span></span>
 					<span class="label label-danger">Yet : <span class="yetNum">50</span></span>
 					<div class="btn-group pull-right filterWrap" role="group" aria-label="...">
-						<button type="button" class="btn btn-default btn-sm active filter btn-All">All</button>
+						<button type="button" class="btn btn-default btn-sm filter btn-All">All</button>
 						<button type="button" class="btn btn-default btn-sm filter btn-Done">Done</button>
 						<button type="button" class="btn btn-default btn-sm filter btn-Yet">Yet</button>
 					</div>
