--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
 					<ul class="list-group">
 						<li class="list-group-item task">
 							<span class="taskStatus"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></span>
-							Cras justo odio
 							<span class="glyphicon glyphicon-remove btn-delTask pull-right" aria-hidden="true"></span>
+							<span class="taskContent"contenteditable >Cras justo odio</span>
 						</li>
 						<li class="list-group-item task">
 							<span class="taskStatus"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></span>
-							Cras justo odio
 							<span class="glyphicon glyphicon-remove btn-delTask pull-right" aria-hidden="true"></span>
+							<span class="taskContent"contenteditable >Cras justo odio</span>
 						</li>
 						<li class="list-group-item task">
 							<span class="taskStatus"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></span>
-							Cras justo odio
 							<span class="glyphicon glyphicon-remove btn-delTask pull-right" aria-hidden="true"></span>
+							<span class="taskContent"contenteditable >Cras justo odio</span>
 						</li>
 					</ul>
 				</div>
